--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,36 @@
     transform: rotate(360deg);
   }
 }
+body {
+  background-color: #082032;
+}
+.amiibos {
+  display: flex;
+  flex-wrap: wrap;
+}
+.amiibo-card {
+  margin: 5px;
+  padding: 40px;
+  background-color: #2c394b;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  border-radius: 5px;
+}
+.amiibo-card-name {
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.amiibo-card p {
+  text-align: center;
+  color: #8d8d8d;
+}
+
+.amiibo-card img {
+  width: 150px;
+  display: block;
+  margin: 0 auto;
+}
